# glossa

./: .gitignore  Cargo.toml  README.md
docs/: showcase.md
glossa/: Cargo.toml
glossa-macro/: Cargo.toml
glossa-macro/src/: lib.rs
glossa/src/: lib.rs
tests/: glossa_dsl.rs
