[package]
name = "glossa-macro"
version = "0.1.0"
edition = "2021"
description = "Proc-macro implementation for glossa"
license = "MIT"
repository = "https://github.com/guhhammer/glossa"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1"
